allow duplicate options to be passed to generate and parse methods